--- a/.github/workflows/deploy-iaas-vm.yml
+++ b/.github/workflows/deploy-iaas-vm.yml
@@ -37,3 +37,12 @@ jobs:
           key: ${{ secrets.AZURE_VM_KEY }}
           source: "./*"
           target: "/app"
+      - name: Restart service
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.AZURE_VM_IP }}
+          username: ${{ secrets.AZURE_VM_USERNAME }}
+          key: ${{ secrets.AZURE_VM_KEY }}
+          script: |
+            sudo systemctl stop webapp
+            sudo systemctl start webapp
