--- a/.github/workflows/deploy-iaas-vm.yml
+++ b/.github/workflows/deploy-iaas-vm.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v3
