--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "echo 'building...'"
+    "build": "echo 'building...'",
+    "test": "echo 'testing...'"
   },
   "author": "Akinari Tsugo",
   "license": "MIT",
