--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "sample-webapp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "build": "echo 'building...'",
-    "test": "echo 'testing...'"
+    "start": "node ./bin/www"
   },
-  "author": "Akinari Tsugo",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   }
 }
