--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "echo 'building ...'",
+    "test": "echo 'testing ...'"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
