--- a/.github/workflows/deploy-iaas-vm.yml
+++ b/.github/workflows/deploy-iaas-vm.yml
@@ -4,12 +4,8 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   workflow_dispatch:
 
-permissions:
-  id-token: write
-  contents: read
-
 env:
-  NODEJS_VERSION: 18
+  NODEJS_VERSION: 18.x
 
 jobs:
   build-deploy:
@@ -22,9 +18,6 @@ jobs:
         with:
           node-version: ${{ env.NODEJS_VERSION }}
           cache: "npm"
-          cache-dependencty-path: |
-            **/package-lock.json
-            **/yarn.lock
       - name: Install dependencies
         run: npm ci
       - name: Build Node.js app
